# job-lens

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: 01-toxic-startup.txt  02-average-posting.txt  03-strong-posting.txt  README.md
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  sample.ts  types.ts
frontend/src/components/: FlagCard.tsx  LoadingState.tsx  ScoreRing.tsx
src/job_lens/: analyzer.py  main.py  schemas.py
src/job_lens/static/: index.html
tests/: test_api.py
