[project]
name = "job-lens"
version = "0.1.0"
description = "AI-powered job description analyzer: spots red flags and suggests fixes"
readme = "README.md"
authors = [
    { name = "Gabriel Borges", email = "contato@gbdev.me" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "anthropic>=0.116",
    "pydantic>=2.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
